# pyryu

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
pyryu/: __init__.py
src/: lib.rs
tests/: test_pyru.py
