[project]
name = "pyryu"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [{ name = "Chris Parker", email = "<mrcsparker@gmail.com>" }]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.poetry]
name = "pyryu"
version = "1.0.0"
description = "Python wrapper for ryu"
authors = ["Chris Parker <mrcsparker@gmail.com>"]
license = "MIT"
readme = 'README.md'
homepage = "https://github.com/mrcsparker/pyryu"
repository = "https://github.com/mrcsparker/pyryu"
documentation = "https://github.com/mrcsparker/pyryu"
keywords = ['ryu', 'pyryu']

[tool.poetry.dependencies]
python = ">=3.8"
maturin = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"


[tool.maturin]
features = ["pyo3/extension-module"]
